@@ -1,6 +1,9 @@
 package com.nimbusds.jose;
 
 
+import net.jcip.annotations.Immutable;
+
+
 /**
  * JSON Web Encryption (JWE) algorithm name, represents the {@code alg} header 
  * parameter in JWE objects. This class is immutable.
@@ -21,8 +24,9 @@ package com.nimbusds.jose;
  * <p>Additional JWE algorithm names can be defined using the constructors.
  *
  * @author Vladimir Dzhuvinov
- * @version $version$ (2012-09-19)
+ * @version $version$ (2012-10-23)
  */
+@Immutable
 public final class JWEAlgorithm extends Algorithm {
 
 
