@@ -7,6 +7,8 @@ import javax.crypto.Mac;
 
 import javax.crypto.spec.SecretKeySpec;
 
+import net.jcip.annotations.ThreadSafe;
+
 import com.nimbusds.jose.JOSEException;
 import com.nimbusds.jose.JWSSigner;
 import com.nimbusds.jose.ReadOnlyJWSHeader;
@@ -17,7 +19,7 @@ import com.nimbusds.jose.util.Base64URL;
 
 /**
  * Message Authentication Code (MAC) signer of 
- * {@link com.nimbusds.jose.JWSObject JWS objects}.
+ * {@link com.nimbusds.jose.JWSObject JWS objects}. This class is thread-safe.
  *
  * <p>Supports the following JSON Web Algorithms (JWAs):
  *
@@ -28,8 +30,9 @@ import com.nimbusds.jose.util.Base64URL;
  * </ul>
  * 
  * @author Vladimir Dzhuvinov
- * @version $version$ (2012-10-04)
+ * @version $version$ (2012-10-23)
  */
+@ThreadSafe
 public class MACSigner extends MACProvider implements JWSSigner {
 
 
